<?xml version="1.0" encoding="utf-8"?>
<!--    NIM                 : 10118083-->
<!--    Nama                : Tendy Hermansyah-->
<!--    Kelas               : IF2-->
<!--    Matakuliah          : Aplikasi Komputasi Bergerak-->
<!--    Tanggal pengerjaan  : 04 Juni 2021-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_menu"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/dailyactivity_menu"
        android:title="@string/daily"
        android:icon="@drawable/ic_activity"/>
    <item
        android:id="@+id/gallery_menu"
        android:title="@string/gallery"
        android:icon="@drawable/ic_gallery"/>
    <item
        android:id="@+id/music_menu"
        android:title="@string/music"
        android:icon="@drawable/ic_music"/>
    <item
        android:id="@+id/profile_menu"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"/>
</menu>