<?xml version="1.0" encoding="utf-8"?>
<!--    NIM                 : 10118083-->
<!--    Nama                : Tendy Hermansyah-->
<!--    Kelas               : IF2-->
<!--    Matakuliah          : Aplikasi Komputasi Bergerak-->
<!--    Tanggal pengerjaan  : 04 Juni 2021-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <EditText
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_weight="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="100dp"
        android:background="@drawable/gradient2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/clouds"
        android:textSize="21dp"
        android:gravity="center"
        android:layout_marginTop="55dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mhs"
        android:textColor="@color/clouds"
        android:textSize="17dp"
        android:gravity="center"
        android:layout_marginTop="85dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:textColor="@color/clouds"
        android:textSize="17dp"
        android:gravity="center"
        android:layout_marginTop="115dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/myCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_weight="1"
        app:cardCornerRadius="75dp"
        android:layout_marginTop="180dp">

        <RelativeLayout
            android:id="@+id/shape_layout"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:background="@drawable/profile">

            <ImageView
                android:id="@+id/roundedimag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:background="@color/clouds">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hobby"
            android:textSize="17dp"
            android:textColor="@color/wet"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/makes"
                android:textSize="17dp"
                android:textColor="@color/wet"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mikes"
                android:textSize="17dp"
                android:textColor="@color/wet"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interest"
                android:textSize="17dp"
                android:textColor="@color/wet"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cita"
                android:textSize="17dp"
                android:textColor="@color/wet"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desk"
                android:layout_marginTop="5dp"
                android:textSize="17dp"
                android:textColor="@color/wet"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>