<?xml version="1.0" encoding="utf-8"?>
<!--    NIM                 : 10118083-->
<!--    Nama                : Tendy Hermansyah-->
<!--    Kelas               : IF2-->
<!--    Matakuliah          : Aplikasi Komputasi Bergerak-->
<!--    Tanggal pengerjaan  : 04 Juni 2021-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient2">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textFontWeight="500"
            android:lineHeight="22sp"
            android:id="@+id/about1"
            android:text="@string/about1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textFontWeight="500"
            android:lineHeight="22sp"
            android:id="@+id/about2"
            android:text="@string/about2"
            android:layout_below="@+id/about1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textFontWeight="500"
            android:lineHeight="22sp"
            android:id="@+id/about3"
            android:text="@string/about3"
            android:layout_below="@+id/about2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textFontWeight="500"
            android:lineHeight="22sp"
            android:id="@+id/about4"
            android:text="@string/about4"
            android:layout_below="@+id/about3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textFontWeight="500"
            android:lineHeight="22sp"
            android:id="@+id/about5"
            android:text="@string/about5"
            android:layout_below="@+id/about4"/>

    </RelativeLayout>

</RelativeLayout>