<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="75dp"
        android:background="#802C3A47">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profile">
            </ImageView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="110dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/nama"
                    android:text="@string/name"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textFontWeight="500"
                    android:lineHeight="22sp">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:id="@+id/ttl"
                    android:text="@string/ttl"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:textFontWeight="500"
                    android:lineHeight="22sp">
                </TextView>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textFontWeight="500"
                android:lineHeight="22sp"
                android:id="@+id/datadiri"
                android:text="@string/desk">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/datadiri"
                android:text="@string/find"
                android:id="@+id/findme"
                android:textAlignment="center"
                android:textColor="#ffffff">
            </TextView>
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:src="@drawable/fb"
                android:id="@+id/fb"
                tools:ignore="ContentDescription"
                android:onClick="shareToFacebook"
                android:layout_below="@+id/findme"/>
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/wa"
                android:id="@+id/wa"
                tools:ignore="ContentDescription"
                android:onClick="shareToWhatsapp"
                android:layout_toRightOf="@+id/fb"
                android:layout_below="@+id/findme"/>
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/tele"
                android:id="@+id/tele"
                tools:ignore="ContentDescription"
                android:onClick="shareToTelegram"
                android:layout_toRightOf="@+id/wa"
                android:layout_below="@+id/findme"/>
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/gm"
                android:id="@+id/gm"
                tools:ignore="ContentDescription"
                android:onClick="shareToGmail"
                android:layout_toRightOf="@+id/tele"
                android:layout_below="@+id/findme"/>
            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/maps"
                android:id="@+id/maps"
                tools:ignore="ContentDescription"
                android:onClick="shareToMaps"
                android:layout_toRightOf="@+id/gm"
                android:layout_below="@+id/findme"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_below="@+id/tele"
                android:layout_marginTop="20dp"
                android:id="@+id/btnabout"
                android:background="@drawable/btn_round"
                android:text="ABOUT"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:onClick="about"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>